Add routers for get event types
